--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,14 @@
 
 title: tronarpad.hu
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Proba leiras
+description: Trón Árpád emlékhonlap>- # this means to ignore newlines until "baseurl:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
-baseurl: "/emlek" # the subpath of your site, e.g. /blog
+baseurl: "tronandris.github.io" # the subpath of your site, e.g. /blog
 url: "tronandris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: no-twitter
+github_username:  tronandris
 
 # Build settings
 theme: minima
