--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: Trón Árpád emlékhonlap>- # this means to ignore newlines until 
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
-baseurl: "tronandris.github.io" # the subpath of your site, e.g. /blog
-url: "tronandris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://tronandris.github.io" # the subpath of your site, e.g. /blog
+url: "https://tronandris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #baseurl: "tronarpad.hu" # the subpath of your site, e.g. /blog
 #url: "tronarpad.hu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: no-twitter
